--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -2,4 +2,5 @@ user_uuid="0d8da7eb-48e2-4cf4-8159-b38beecca0bc"
 bucket_name = "cyberinsight-terraform-bootcamp"
 index_html_filepath="/workspace/terraform-beginner-bootcamp-2023/public/index.html"
 error_html_filepath="/workspace/terraform-beginner-bootcamp-2023/public/error.html"
+assets_path="/workspace/terraform-beginner-bootcamp-2023/public/assets"
 content_version=1
