#37 added multiple graph extensions to Gitpod config

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -20,3 +20,6 @@ vscode:
   extensions:
     - amazonwebservices.aws-toolkit-vscode
     - hashicorp.terraform
+    - phil294.git-log--graph
+    - mhutchie.git-graph
+    - phil294.git-log--graph
