--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,21 +1,31 @@
 tasks:
   - name: terraform
     before: |
-      source ./bin/install_terraform_cli.sh
-      source ./bin/generate_tfrc_credentials.sh
-      source ./bin/set_tf_alias.sh
+      cd $PROJECT_ROOT
+      source ./bin/set_tf_alias
+      source ./bin/install_terraform_cli
+      source ./bin/generate_tfrc_credentials
       cp $PROJECT_ROOT/terraform.tfvars.example $PROJECT_ROOT/terraform.tfvars
+  - name: sinatra
+    before: | 
+      cd $PROJECT_ROOT
+      cd terratowns_mock_server
+      bundle install
+      bundle exec ruby server.rb 
   - name: aws-cli
     env:
       AWS_CLI_AUTO_PROMPT: on-partial
     before: |
-      source ./bin/install_aws_cli.sh
-      source ./bin/set_tf_alias.sh
+      cd $PROJECT_ROOT
+      source ./bin/set_tf_alias
+      source ./bin/install_aws_cli
   - name: http-server
     before: |
+      cd $PROJECT_ROOT
       npm install --global http-server
     command: 
       http-server
+
 vscode:
   extensions:
     - amazonwebservices.aws-toolkit-vscode
