--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+#Ignore customer provider
+terraform-provider-terratowns/terraform-provider-terratowns_v*
