--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -1,6 +1,6 @@
-user_uuid="0d8da7eb-48e2-4cf4-8159-b38beecca0bc"
+terratowns_endpoint="https://terratowns.cloud/api"
 bucket_name = "cyberinsight-terraform-bootcamp"
 index_html_filepath="/workspace/terraform-beginner-bootcamp-2023/public/index.html"
 error_html_filepath="/workspace/terraform-beginner-bootcamp-2023/public/error.html"
-assets_path="/workspace/terraform-beginner-bootcamp-2023/public/assets"
+assets_path="/workspace/terraform-beginner-bootcamp-2023/public/assets/"
 content_version=1
